Create publishing config.

--- a/build.gradle
+++ b/build.gradle
@@ -59,3 +59,11 @@ shadowJar {
 test {
     useJUnitPlatform()
 }
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifact shadowJar
+        }
+    }
+}
