Maybe this will fix publishing on jitpack?

--- a/build.gradle
+++ b/build.gradle
@@ -66,4 +66,9 @@ publishing {
             artifact shadowJar
         }
     }
+    repositories {
+        maven {
+            mavenLocal()
+        }
+    }
 }
