--- a/build.gradle
+++ b/build.gradle
@@ -67,10 +67,12 @@ artifacts {
 publishing {
     publications {
         maven(MavenPublication) {
-            artifactId project.name
-            groupId project.group
-            version project.version
-            artifact shadowJar
+            artifact(shadowJar) {
+                artifactId project.name
+                groupId project.group
+                version project.version
+                builtBy shadowJar
+            }
         }
     }
     repositories {
