Revert "Maybe fixed this time."
This reverts commit 4870502fdafc58dd83fcca460732700ec837a05f.

--- a/build.gradle
+++ b/build.gradle
@@ -67,12 +67,10 @@ artifacts {
 publishing {
     publications {
         maven(MavenPublication) {
-            artifact(shadowJar) {
-                artifactId project.name
-                groupId project.group
-                version project.version
-                builtBy shadowJar
-            }
+            artifactId project.name
+            groupId project.group
+            version project.version
+            artifact shadowJar
         }
     }
     repositories {
