If this doesn't work to fix Jitpack, I give up.

--- a/build.gradle
+++ b/build.gradle
@@ -59,3 +59,20 @@ shadowJar {
 test {
     useJUnitPlatform()
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact(shadowJar) {
+                builtBy shadowJar
+            }
+        }
+    }
+
+    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+    repositories {
+        maven {
+            mavenLocal()
+        }
+    }
+}
