--- a/build.gradle
+++ b/build.gradle
@@ -69,4 +69,11 @@ publishing {
             from components.java
         }
     }
+
+	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+    repositories {
+        maven {
+            mavenLocal()
+        }
+    }
 }
