--- a/build.gradle
+++ b/build.gradle
@@ -63,9 +63,9 @@ test {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifactId = project.name
-            groupId = project.group
-            version = project.version
+            // artifactId = project.name
+            // groupId = project.group
+            // version = project.version
             from components.java
         }
     }
