Fix some stuff in the build script

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.warning.mode=all
 org.gradle.jvmargs = -Xmx1G
 
 # Project Properties
-maven_group = com.github.reviversmc.modget.auth
+maven_group = com.github.reviversmc.modget
 version = 0.1.0
 
 # Dependencies
