--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
+
 group = project.maven_group.toString()
 version = project.version
 
@@ -42,6 +45,14 @@ compileJava {
     options.release.set(11)
 }
 
+tasks.withType(JavaCompile).configureEach {
+	// ensure that the encoding is set to UTF-8, no matter what the system default is
+	// this fixes some edge cases with special characters not displaying correctly
+	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+	// If Javadoc is generated, this must be specified in that task too.
+	it.options.encoding = "UTF-8"
+}
+
 java {
     withSourcesJar()
     withJavadocJar()
@@ -63,9 +74,9 @@ test {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            // artifactId = project.name
-            // groupId = project.group
-            // version = project.version
+            artifactId = project.name
+            groupId = project.group
+            version = project.version
             from components.java
         }
     }
