--- a/build.gradle
+++ b/build.gradle
@@ -45,18 +45,10 @@ compileJava {
     options.release.set(11)
 }
 
-tasks.withType(JavaCompile).configureEach {
-	// ensure that the encoding is set to UTF-8, no matter what the system default is
-	// this fixes some edge cases with special characters not displaying correctly
-	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-	// If Javadoc is generated, this must be specified in that task too.
-	it.options.encoding = "UTF-8"
-}
-
-java {
-    withSourcesJar()
-    withJavadocJar()
-}
+// java {
+//     withSourcesJar()
+//     withJavadocJar()
+// }
 
 jar {
     from "LICENSE"
@@ -64,6 +56,7 @@ jar {
 }
 
 shadowJar {
+    configurations = [project.configurations.shadow]
     archiveClassifier.set("")
 }
 
