--- a/build.gradle
+++ b/build.gradle
@@ -67,10 +67,9 @@ test {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifactId = project.name
-            groupId = project.group
-            version = project.version
-            from components.java
+            artifact(shadowJar) {
+                builtBy shadowJar
+            }
         }
     }
 
