--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,10 @@
-# Gradle Properties
-org.gradle.parallel=true
-org.gradle.console=rich
-org.gradle.warning.mode=all
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs = -Xmx1G
+org.gradle.jvmargs = -Xmx2G
 
 # Project Properties
 maven_group = com.github.reviversmc.modget
 version = 0.1.0
+name = modget-auth
 
 # Dependencies
 dagger_google_version = 2.41
