--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'java-library'
-    id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '7.1.0'
+    id "java-library"
+    id "maven-publish"
+    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -9,12 +9,6 @@ targetCompatibility = JavaVersion.VERSION_11
 
 version = project.version
 group = project.maven_group
-
-configurations {
-    includeTransitive {
-        transitive = true
-    }
-}
 
 repositories {
     mavenCentral()
