--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,6 @@ group = project.maven_group
 repositories {
     mavenCentral()
     maven {
-        url = "https://mvnrepository.com/"
-    }
-    maven {
         url = "https://jitpack.io"
     }
 }
@@ -41,31 +38,19 @@ dependencies {
     // compileOnly "com.github.spotbugs:spotbugs:${project.spotbugs_version}"
 }
 
-tasks.withType(JavaCompile).configureEach {
-	// ensure that the encoding is set to UTF-8, no matter what the system default is
-	// this fixes some edge cases with special characters not displaying correctly
-	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-	// If Javadoc is generated, this must be specified in that task too.
-	it.options.encoding = "UTF-8"
+compileJava {
+    options.encoding "UTF-8"
+    options.release.set(11)
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
-
-// java {
-//     withSourcesJar()
-//     withJavadocJar()
-// }
 
 jar {
-	from("LICENSE") {
-		rename { "${it}_${project.name}"}
-	}
-    manifest {
-        attributes 'Multi-Release': 'true'
-    }
+    from "LICENSE"
+    manifest.attributes "Multi-Release": "true"
 }
 
 shadowJar {
