--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel=true
+org.gradle.console=rich
+org.gradle.warning.mode=all
 
 # Project Properties
 maven_group = com.github.reviversmc.modget
